--- a/Lab2/page c/index.html
+++ b/Lab2/page c/index.html
@@ -116,8 +116,8 @@
                             <div class="psingle_item">
                              <div class="icon_st"> <img src="images/6_university/icon_1.png" alt=""></div>
                              <div class="text_st">
-                                <h3 class="title_st editContent">High Quality Tutorials</h3>
-                                <h6 class="subject_st editContent">Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt.</h6>
+                                <p class="title_st editContent">High Quality Tutorials</p>
+                                <p class="subject_st editContent">Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt.</p>
                             </div>
                         </div>
                         <!-- ------------------------------------------------------------- -->
@@ -417,7 +417,7 @@
 </div><!-- container -->
 </div>
 </div>
-<div id="hidden_pix_6" class="confirm_page confirm_page_6 pix_builder_bg">
+<!-- <div id="hidden_pix_6" class="confirm_page confirm_page_6 pix_builder_bg">
   <div class="pixfort_university_6">
       
       <div class="confirm_header"><span class="editContent"><span class="pix_text">Thank You Very Much!</span></span></div>
@@ -431,7 +431,7 @@
             <li><a class="pi pixicon-googleplus7 white" href="#fakelink"></a></li>
         </ul>
     </div>
-</div>
+</div> -->
 </div><div class="pixfort_ecourse_8" id="section_ecourse_7">
 
 		<div class="foot_st pix_builder_bg">
@@ -446,14 +446,14 @@
 
 					<div class="nine columns omega ">
 						<div class="socbuttons">
-							<div class="soc_icons pix_builder_bg">
+							<div class="likes_st"><span class="editContent"><span class="pix_text">Your likes &amp; share makes us happy!</span></span></div>
+                            <div class="soc_icons pix_builder_bg">
 								<ul class="bottom-icons">
-		                            <li><a class="pi pixicon-facebook2 normal_gray" href="#fakelink"></a></li>
-		                            <li><a class="pi pixicon-twitter2 normal_gray" href="#fakelink"></a></li>
-		                            <li><a class="pi pixicon-instagram normal_gray" href="#fakelink"></a></li>
+		                            <li><a class="pi pixicon-facebook2 normal_gray" href="#fakelink"><i class="fa-brands fa-facebook-f fa-xl" style="color: #cccccc;"></i></a></a></li>
+		                            <li><a class="pi pixicon-twitter2 normal_gray" href="#fakelink"><i class="fa-brands fa-twitter fa-xl" style="color: #cccccc;"></i></a></li>
+		                            <li><a class="pi pixicon-instagram normal_gray" href="#fakelink"><i class="fa-brands fa-square-instagram fa-xl" style="color: #cccccc;"></i></a></li>
 		                        </ul>
 							</div>
-							<div class="likes_st"><span class="editContent"><span class="pix_text">Your likes &amp; share makes us happy!</span></span></div>
 						</div>
 					</div>
 				</div>
