--- a/Lab2/page c/index.html
+++ b/Lab2/page c/index.html
@@ -449,9 +449,9 @@
                             <div class="likes_st"><span class="editContent"><span class="pix_text">Your likes &amp; share makes us happy!</span></span></div>
                             <div class="soc_icons pix_builder_bg">
                                 <ul class="bottom-icons">
-                                    <li><a class="pi pixicon-facebook2 normal_gray" href="#fakelink"><i class="fa-brands fa-facebook-f fa-xl" style="color: #cccccc;"></i></a></a></li>
-                                    <li><a class="pi pixicon-twitter2 normal_gray" href="#fakelink"><i class="fa-brands fa-twitter fa-xl" style="color: #cccccc;"></i></a></li>
-                                    <li><a class="pi pixicon-instagram normal_gray" href="#fakelink"><i class="fa-brands fa-square-instagram fa-xl" style="color: #cccccc;"></i></a></li>
+                                    <li><a class="pi pixicon-facebook2 normal_gray" href="#fakelink"><i class="fa-brands fa-facebook-f fa-xl" style="color: rgb(180, 180, 180);"></i></a></a></li>
+                                    <li><a class="pi pixicon-twitter2 normal_gray" href="#fakelink"><i class="fa-brands fa-twitter fa-xl" style="color: rgb(180, 180, 180);"></i></a></li>
+                                    <li><a class="pi pixicon-instagram normal_gray" href="#fakelink"><i class="fa-brands fa-square-instagram fa-xl" style="color: rgb(180, 180, 180);"></i></a></li>
                                 </ul>
                             </div>
                         </div>
